
	* speedbar.el (speedbar-item-delete):
	* calc/calc-prog.el (calc-kbd-if):
	* language/hanja-util.el (hanja-init-load): Fix typos in messages.

	* epa.el (epa-key-list-mode-map):
	* hi-lock.el (hi-lock-menu): Fix typos in menus.

	* progmodes/hideshow.el (hs-allow-nesting): Reflow docstring.
	(hs-show-hook): Fix typo in docstring.

2009-09-29  Glenn Morris  <rgm@gnu.org>

	* cedet/ede/srecode.el (srecode-resolve-arguments): Fix declaration.

	* cedet/semantic/complete.el (semantic-displayor-focus-abstract-child-p):
	* cedet/semantic/tag-file.el (semanticdb-table-child-p):
	* cedet/srecode/compile.el (srecode-template-inserter-newline-child-p):
	Mark declarations not understood by check-declare.

	* emacs-lisp/check-declare.el (check-declare-locate): Remove pointless
	file-name-nondirectory call preventing location of cedet files.
	(check-declare-verify): Use literal search rather than re-search.
	Add basic defmethod and defclass, and define-overloadable-function.

	* net/tramp-smb.el (tramp-smb-handle-directory-files-and-attributes):
	Use tramp-compat-file-attributes rather than nonexistent
	tramp-compat-handle-file-attributes.

	* Makefile.in (lisptagsfiles4): New.
	(AUTOGENEL): Add cedet loaddefs files.
	(TAGS, TAGS-LISP): Use $lisptagsfiles4.
	(update-elclist, compile-always, backup-compiled-files)
	(bootstrap-clean): Add yet another directory level.
	(update-elclist): Use LC_COLLATE rather than COLLATE.
	(ELCFILES): Update, via `make update-elclist'.

2009-09-29  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (WINS_CEDET, WINS_BASIC, WINS_SUBDIR): New macros.
	(WINS_ALMOST): Set from WINS_BASIC and WINS_CEDET.
	(update-subdirs-CMD): Use WINS_SUBDIR, not WINS_ALMOST.

2009-09-28  Andreas Schwab  <schwab@linux-m68k.org>

	* Makefile.in (lisptagsfiles3): Define.
	(TAGS, TAGS-LISP): Use it.
	(update-elclist): Add third directory level to look for elc files.
	(compile-always): Likewise.
	(backup-compiled-files): Likewise.
	(bootstrap-clean): Likewise.